[workspace.package]
version = "0.1.0"
authors = ["Webb Technologies Inc."]
edition = "2021"
license = "Unlicense"
homepage = "https://tangle.network"
repository = "https://github.com/webb-tools/tangle-restaking-parachain"

cargo-features = ["resolver"]

[workspace]
members = [
	"node",
	"primitives",
	"pallets/asset-registry",
	"pallets/currencies",
	"pallets/xcm-interface",
	"pallets/lst-minting",
	"pallets/slp",
	"pallets/parachain-staking",
	"runtime/polkadot",
	"runtime/testnet",
]
resolver = "2"

[workspace.dependencies]

# Tangle Runtime
tangle-polkadot-runtime = { path = "runtime/polkadot" }

# Tangle pallets
tangle-asset-registry = { path = "pallets/asset-registry", default-features = false }
tangle-currencies = { path = "pallets/currencies", default-features = false }
tangle-parachain-staking = { path = "pallets/parachain-staking", default-features = false }
tangle-primitives = { path = "primitives" , default-features = false }
tangle-lst-minting = { path = "pallets/lst-minting", default-features = false }
tangle-slp = { path = "pallets/slp", default-features = false }
tangle-xcm-interface = { path = "pallets/xcm-interface", default-features = false }
pallet-traits = { path = "pallets/traits", default-features = false }

# Orml
orml-tokens = { version = "1.0.0", default-features = false }
orml-traits = { version = "1.0.0", default-features = false }
orml-unknown-tokens = { version = "1.0.0", default-features = false }
orml-utilities = { version = "1.0.0", default-features = false }
orml-xcm = { version = "1.0.0", default-features = false }
orml-xcm-support = { version = "1.0.0", default-features = false }
orml-xtokens = { version = "1.0.0", default-features = false }
orml-oracle = { version = "1.0.0", default-features = false }

# polkadot-sdk (wasm)
cumulus-client-collator = { version = "0.17.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.15.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.16.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.16.0", default-features = false }
cumulus-pallet-xcm = { version = "0.16.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.16.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.16.0", default-features = false }
cumulus-primitives-core = { version = "0.15.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.15.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.15.0", default-features = false }
cumulus-primitives-utility = { version = "0.16.0", default-features = false }
cumulus-test-relay-sproof-builder = { version = "0.15.0", default-features = false }
frame-benchmarking = { version = "37.0.0", default-features = false }
frame-executive = { version = "37.0.0", default-features = false }
frame-support = { version = "37.0.0", default-features = false }
frame-system = { version = "37.0.0", default-features = false }
frame-system-benchmarking = { version = "37.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.5.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.43.0", default-features = false }
pallet-assets = { version = "39.0.0", default-features = false }
pallet-uniques = { version = "37.0.0", default-features = false }
pallet-asset-rate = { version = "16.0.0", default-features = false }
pallet-aura = { version = "36.0.0", default-features = false }
pallet-authority-discovery = { version = "37.0.0", default-features = false }
pallet-authorship = { version = "37.0.0", default-features = false }
pallet-balances = { version = "38.0.0", default-features = false }
pallet-bounties = { version = "36.0.0", default-features = false }
pallet-collator-selection = { version = "18.0.0", default-features = false }
pallet-collective = { version = "37.0.0", default-features = false }
pallet-conviction-voting = { version = "37.0.0", default-features = false }
pallet-democracy = { version = "37.0.0", default-features = false }
pallet-elections-phragmen = { version = "38.0.0", default-features = false }
pallet-identity = { version = "37.0.0", default-features = false }
pallet-im-online = { version = "36.0.0", default-features = false }
pallet-indices = { version = "37.0.0", default-features = false }
pallet-membership = { version = "37.0.0", default-features = false }
pallet-message-queue = { version = "40.0.0", default-features = false }
pallet-multisig = { version = "37.0.0", default-features = false }
pallet-preimage = { version = "37.0.0", default-features = false }
pallet-proxy = { version = "37.0.0", default-features = false }
pallet-ranked-collective = { version = "37.0.0", default-features = false }
pallet-recovery = { version = "37.0.0", default-features = false }
pallet-referenda = { version = "37.0.0", default-features = false }
pallet-scheduler = { version = "38.0.0", default-features = false }
pallet-session = { version = "37.0.0", default-features = false }
pallet-staking = { version = "37.0.0", default-features = false }
pallet-sudo = { version = "37.0.0", default-features = false }
pallet-timestamp = { version = "36.0.0", default-features = false }
pallet-tips = { version = "36.0.0", default-features = false }
pallet-transaction-payment = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "37.0.0", default-features = false }
pallet-treasury = { version = "36.0.0", default-features = false }
pallet-utility = { version = "37.0.0", default-features = false }
pallet-whitelist = { version = "36.0.0", default-features = false }
pallet-xcm = { version = "16.0.0", default-features = false }
parachains-common = { version = "17.0.0", default-features = false }
parachain-info = { version = "0.16.0", package = "staging-parachain-info", default-features = false }
polkadot-core-primitives = { version = "15.0.0", default-features = false }
polkadot-parachain-primitives = { version = "14.0.0", default-features = false }
polkadot-primitives = { version = "15.0.0", default-features = false }
polkadot-service = { version = "17.0.0", default-features = false }
polkadot-runtime-common = { version = "16.0.0", default-features = false }
polkadot-runtime-parachains = { version = "16.0.0", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-application-crypto = { version = "38.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-authority-discovery = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.0", default-features = false }
sp-consensus = { version = "0.40.0", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-consensus-beefy = { version = "22.0.0", default-features = false }
sp-consensus-slots = { version = "0.40.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
sp-externalities = { version = "0.29.0", default-features = false }
sp-genesis-builder = { version = "0.15.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-maybe-compressed-blob = { version = "11.0.0", default-features = false }
sp-npos-elections = { version = "34.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-runtime-interface = { version = "28.0.0", default-features = false }
sp-session = { version = "35.0.0", default-features = false }
sp-staking = { version = "34.0.0", default-features = false }
sp-state-machine = { version = "0.43.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
sp-tracing = { version = "17.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-trie = { version = "37.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
sp-wasm-interface = { version = "21.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }
substrate-fixed = { version = "0.5.9", default-features = false }
xcm = { version = "14.1.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "16.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "16.0.0", package = "staging-xcm-executor", default-features = false }

# polkadot-sdk (client)
cumulus-client-cli = { version = "0.17.0" }
cumulus-client-consensus-aura = { version = "0.17.0" }
cumulus-client-consensus-common = { version = "0.17.0" }
cumulus-client-consensus-relay-chain = { version = "0.17.0" }
cumulus-client-network = { version = "0.17.0" }
cumulus-client-pov-recovery = { version = "0.17.0" }
cumulus-client-service = { version = "0.17.0" }
cumulus-relay-chain-inprocess-interface = { version = "0.17.0" }
cumulus-relay-chain-interface = { version = "0.17.0" }
cumulus-relay-chain-minimal-node = { version = "0.17.0" }
cumulus-relay-chain-rpc-interface = { version = "0.17.0" }
cumulus-pallet-session-benchmarking = { version = "18.0.0" }
cumulus-primitives-storage-weight-reclaim = { version = "7.0.0", default-features = false }
cumulus-primitives-aura = { version = "0.15.0", default-features = false }
frame-benchmarking-cli = { version = "42.0.0" }
node-inspect = { version = "0.22.0", package = "staging-node-inspect" }
pallet-transaction-payment-rpc = { version = "40.0.0" }
polkadot-cli = { version = "17.0.0" }
sc-basic-authorship = { version = "0.44.0" }
sc-chain-spec = { version = "37.0.0" }
sc-cli = { version = "0.46.0" }
sc-client-api = { version = "37.0.0" }
sc-consensus = { version = "0.43.0", default-features = false }
sc-consensus-aura = { version = "0.44.0", default-features = false }
sc-consensus-manual-seal = { version = "0.45.0", default-features = false }
sc-consensus-slots = { version = "0.43.0" }
sc-executor = { version = "0.40.0" }
sc-keystore = { version = "33.0.0" }
sc-network = { version = "0.44.0" }
sc-network-common = { version = "0.43.0" }
sc-network-sync = { version = "0.43.0" }
sc-offchain = { version = "39.0.0" }
sc-rpc = { version = "39.0.0" }
sc-rpc-api = { version = "0.43.0" }
sc-rpc-server = { version = "16.0.2" }
sc-service = { version = "0.45.0" }
sc-sysinfo = { version = "37.0.0" }
sc-telemetry = { version = "24.0.0" }
sc-tracing = { version = "37.0.0" }
sc-transaction-pool = { version = "37.0.0" }
sc-transaction-pool-api = { version = "37.0.0" }
sp-consensus-babe = { version = "0.40.0" }
sp-rpc = { version = "32.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "38.0.0" }
substrate-prometheus-endpoint = { version = "0.17.0" }
substrate-wasm-builder = { version = "24.0.0" }
try-runtime-cli = { version = "0.39.0" }
xcm-emulator = { version = "0.15.0" }
xcm-simulator = { version = "16.0.0" }

# Other
async-trait = { version = "0.1.76" }
bstringify = { version = "0.1.2" }
clap = { version = "4.5.8" }
env_logger = { version = "0.10.2" }
ethabi = { version = "18.0.0", default-features = false }
ethereum = { version = "0.14.0", default-features = false, features = ["with-codec"] }
futures = { version =  "0.3.30" }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1" }
impl-trait-for-tuples = { version = "0.2.2" }
jsonrpsee = { version = "0.23.2" }
log = { version = "0.4.22", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
paste = { version = "1.0.15" }
scale-info = { version = "2.11.3", default-features = false }
serde = { version = "1.0.203", default-features = false }
serde_json = { version = "1.0.120", default-features = false }
similar-asserts = { version = "1.1.0" }
smallvec = { version = "1.13.1" }
static_assertions = { version = "1.1.0" }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
strum_macros = { version = "0.26.2" }
tiny-keccak = { version = "2.0", features = ["fips202"] }
color-print = { version = "0.3.4" }
docify = { version = "0.2.8" }
prometheus-endpoint = { version = "0.17.0", package = "substrate-prometheus-endpoint" }

# Hyperbridge (ISMP)
# ismp = { version = "0.2.0", default-features = false }
# pallet-ismp = { version = "1.15.0", default-features = false }
# ismp-grandpa = { version = "1.15.0", default-features = false }
# pallet-ismp-runtime-api = { version = "1.15.0", default-features = false }
# pallet-ismp-rpc = { version = "1.15.0" }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
panic = "unwind"
